--- a/02042025/index2.html
+++ b/02042025/index2.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <h1 id="">Texto 1</h1>
+    <h1 id="tituloWeb2">Texto 2</h1>
+    <h1 id="tituloWeb3">Texto 3</h1>
+    <script src="app3.js"></script>
 </body>
 </html>
