--- a/21042025/qr.html
+++ b/21042025/qr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea Qr</title>
-    <link href="tarea.css" rel="stylesheet">
+    <link href="qr.css" rel="stylesheet">
 </head>
 <body>
     <div id="contenedor-form">
@@ -17,6 +17,6 @@
         </form>
     </div>
     <div id="div-qr"></div>
-    <script src="tarea.js"></script>
+    <script src="qr.js"></script>
 </body>
 </html>
